# api-pdx-sdk-rust

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AuthErrorResponse.md  AuthErrorResponseError.md  CalendarApi.md  CalendarAppointmentCreateRequestBody.md  CalendarEvent.md  CalendarEventCommonRequestBodyFields.md  CalendarEventCreateRequestBody.md  CalendarEventDeleteRequestBody.md  CalendarEventUpdateRequestBody.md  CreateResponse.md  DeleteResponse.md  ErrorResponse.md  GetAppointmentsResponse.md  GetEventsResponse.md  ReferralCommonRequestBodyFields.md  ReferralCommonRequestBodyFieldsReferreeAvailability.md  ReferralListResponse.md  ReferralListResponseReferralsInner.md  ReferralSingleResponse.md  ReferralSingleResponseReferral.md  ReferralStatusUpdateRequestBody.md  ReferralsApi.md  SecureMessage.md  SecureMessageCommonFields.md  SecureMessageConversationResponse.md  SecureMessageReceiveRequest.md  SecureMessageSendRequest.md  SecureMessagesApi.md  SelfReferralRequestBody.md  TimelineApi.md  TimelineItemCalendarEvent.md  TimelineItemReferral.md  TimelineItemSecureMessage.md  TimelineResponse.md  TimelineResponseTimelineInner.md  TimelineResponseTimelineInnerOneOf.md  TimelineResponseTimelineInnerOneOf1.md  TimelineResponseTimelineInnerOneOf2.md  TimelineSingleItemResponse.md  TimelineSingleItemResponseTimelineItem.md  (+1 more)
src/apis/: calendar_api.rs  configuration.rs  mod.rs  referrals_api.rs  secure_messages_api.rs  timeline_api.rs
src/models/: auth_error_response.rs  auth_error_response_error.rs  calendar_appointment_create_request_body.rs  mod.rs  (+34 more)
