[package]
name = "api_pdx_sdk_rust"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
description = "API for processing subscribers requests to the PDX API to retrieve one or more combinations of data, deliver and update records in a Members PDS and ensure record integrity is maintained."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]
